--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -71,6 +71,37 @@
         </div>
     </section>
 
+    <!--Carreras-->
+
+    <section id="carreras" class="container-fluid">
+        <h1 class="my-4 text-center">Carreras más populares</h1>
+        <div class="row justify-content-around">
+            <div class="card col-md-3 col-10 p-0 my-2">
+                <img src="./imagnes/fotoBadajoz.jpg" class="card-img-top img-fluid" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Badajoz</h5>
+                    <p class="card-text">Carrera de Badajoz</p>
+                    <a href="#" class="btn btn-primary">Visitar</a>
+                </div>
+            </div>
+            <div class="card col-md-3 col-10 p-0 my-2">
+                <img src="./imagnes/fotomadrid.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Madrid</h5>
+                    <p class="card-text">Carrera de Madrid</p>
+                    <a href="#" class="btn btn-primary">Visitar</a>
+                </div>
+            </div>
+            <div class="card col-md-3 col-10 p-0 my-2">
+                <img src="./imagnes/fotoValencia.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Valencia</h5>
+                    <p class="card-text">Carrera de Valencia</p>
+                    <a href="#" class="btn btn-primary">Visitar</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--Contenido-->
 
@@ -78,6 +109,17 @@
 
     </section>
 
+    <footer class="container-fluid d-flex bg-negro text-white mt-5">
+        <div class="row">
+            <div class="col-md-6 col-10">
+                <p>Copyright ©</p>
+                <p>José Vicente Martín Tejado</p>
+            </div>
+            <div class="col-md-8 col-10 ">
+                
+            </div>
+        </div>
+    </footer>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
