--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -157,9 +157,9 @@
                     <p><label for="inpUsuario">Usuario</label></p>
                     <input type="text" name="usuario" id="inpUsuario" class="form-control">
                     <p><label for="inpClave">Clave</label></p>
-                    <input type="text" name="inpClave" id="inpClave" class="form-control">
+                    <input type="password" name="inpClave" id="inpClave" class="form-control">
                     <a href="#" class="btn btn-sesion my-4">Iniciar sesión</a>
-                    <p class="fw-bold fs-6">¿Aún no tienes cuenta? , regístrate <a href="#">aquí</a></p>
+                    <p class="fw-bold fs-6">¿Aún no tienes cuenta? , regístrate <a href="#" class="text-azul">aquí</a></p>
                 </form>
             </div>
         </div>
