--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="css/estilo.scss">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/misSript.js"></script>
 </head>
 
 <body>
-
 
     <!-- Barra de navegación -->
 
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active  text-whiteSmoke" aria-current="page" href="#">Inicio</a>
-                    <a class="nav-link active  text-whiteSmoke" href="#">Carreras</a>
+                    <a class="nav-link active  text-whiteSmoke" href="#" id="carrera">Carreras</a>
                     <a class="nav-link active  text-whiteSmoke" href="#">Clasificaciones</a>
                     <a class="nav-link active  text-whiteSmoke" id="sesion" data-bs-toggle="offcanvas"
                         href="#canvasSesion" role="button" aria-controls="canvasSesion">Iniciar Sesión</a>
@@ -153,14 +153,12 @@
         </div>
         <div class="offcanvas-body">
             <div>
-                <form action="" method="post">
                     <p><label for="inpUsuario">Usuario</label></p>
                     <input type="text" name="usuario" id="inpUsuario" class="form-control">
                     <p><label for="inpClave">Clave</label></p>
                     <input type="password" name="inpClave" id="inpClave" class="form-control">
-                    <a href="#" class="btn btn-sesion my-4">Iniciar sesión</a>
+                    <a href="#" class="btn btn-sesion my-4" id="btnSesion">Iniciar sesión</a>
                     <p class="fw-bold fs-6">¿Aún no tienes cuenta? , regístrate <a href="#" class="text-azul">aquí</a></p>
-                </form>
             </div>
         </div>
     </div>
