--- a/Pagina/registro.html
+++ b/Pagina/registro.html
@@ -11,19 +11,73 @@
             border: 1px solid grey;
         }
     </style>
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                url: "./Php/tipoUsuario.php",
+                type: "GET",
+                success: function (datos) {
+                    let data = datos.split(";")
+                    for (let index = 0; index < data.length - 1; index++) {
+                        $("#tipoUsuario").append("<option value='" + (index + 1) + "'>" + data[index] + "</option>")
+                    }
+                }
+            })
+            $("#sesion").click(function () {
+                let usuario = $("#usuario").val()
+                let clave = $("#clave").val()
+                let nombre = $("#nombreUsuario").val()
+                let tipo = $("#tipoUsuario").val()
+                let fechaNacimiento = $("#fechaNacimiento").val()
+                let localidad = $("#localidad").val()
+                $.ajax({
+                    url: "./Php/registrar.php",
+                    data: {
+                        "usuario": usuario,
+                        "clave": clave,
+                        "nombreUsuario": nombre,
+                        "localidad": localidad,
+                        "tipoUsuario": tipo,
+                        "fechaNacimiento": fechaNacimiento,
+                    },
+                    type: "GET",
+                    success: function () {
+                        localStorage.setItem("usuario", usuario)
+                        location.href = "./index.html"
+                    },
+                    error: function (e) {
+                        alert("No se ha podido registrar el usuario en la base de datos.")
+                        console.log(e)
+                    }
+                })
+            })
+        })
+    </script>
 </head>
 
 <body>
     <section class="container-fluid">
         <div class="row text-start p-3 justify-content-center">
             <div class="col-4 rounded-1" id="formulario">
-                <h1 class="text-center my-4 p-3">Registro de usuario</h1>
-                <form action="" id="formularioSesion">
+                <form action="registrar.php" method="post" enctype="multipart/form-data">
+                    <h1 class="text-center my-4 p-3">Registro de usuario</h1>
                     <label for="usuario" class="text-start">Usuario</label><input type="text" name="usuario"
                         id="usuario" class="my-2 form-control" maxlength="20" minlength="1" pattern="([A-Z]+|[a-z]+)"
                         required>
+                    <label for="usuario" class="text-start">Nombre completo</label><input type="text"
+                        name="nombreUsuario" id="nombreUsuario" class="my-2 form-control" maxlength="20" minlength="1"
+                        pattern="([A-Z]+|[a-z]+)" required>
                     <label for="clave">Clave</label><input type="password" name="clave" id="clave"
                         class="my-2 form-control" maxlength="20" minlength="1" pattern="([A-Z]+|[a-z]+)" required>
+                    <label for="tipoUsuario" class="text-start">Tipo Usuario</label>
+                    <select name="tipoUsuario" id="tipoUsuario" class="form-control my-2">
+
+                    </select>
+                    <label for="fechaNacimiento" class="text-start">Fecha de nacimiento</label>
+                    <input type="date" name="fechaNacimiento" id="fechaNacimiento" class="form-control my-2">
+                    <label for="localidad">Localidad</label>
+                    <input type="text" id="localidad" name="localidad" class="form-control my-2">
                     <div class="container-fluid text-center">
                         <button class="btn btn-primary my-4" id="sesion">Iniciar sesión</button>
                     </div>
