--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link active  text-whiteSmoke" href="#" id="carrera">Carreras</a>
                     <a class="nav-link active  text-whiteSmoke" href="#">Clasificaciones</a>
                     <a class="nav-link active  text-whiteSmoke" id="sesion" data-bs-toggle="offcanvas"
-                        href="#canvasSesion" role="button" aria-controls="canvasSesion">Iniciar Sesión</a>
+                        href="#canvasSesion" role="button" aria-controls="canvasSesion"></a>
                 </div>
             </div>
         </div>
@@ -152,16 +152,8 @@
             <h5 class="offcanvas-title" id="titCanvas">Inicio de sesión</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body">
-            <div>
-                <p><label for="inpUsuario">Usuario</label></p>
-                <input type="text" name="usuario" id="inpUsuario" class="form-control">
-                <p><label for="inpClave">Clave</label></p>
-                <input type="password" name="inpClave" id="inpClave" class="form-control">
-                <a href="#" class="btn btn-sesion my-4" id="btnSesion">Iniciar sesión</a>
-                <p class="fw-bold fs-6">¿Aún no tienes cuenta? , regístrate <a href="#" class="text-azul">aquí</a></p>
-                <div id="errorSesion" class="text-red"></div>
-            </div>
+        <div class="offcanvas-body" id="contenidoCanvas">
+            
         </div>
     </div>
 
