--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="Wbesite Icon" type="png" href="./imagnes/R-tracker-logos_transparent.png">
     <title>R-Tracker</title>
     <link rel="stylesheet" href="css/estilo.scss">
     <link rel="stylesheet" href="css/estilo.css">
@@ -18,7 +19,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-negro" id="cabecera">
         <div class="container-fluid">
-            <a class="navbar-brand text-whiteSmoke" href="#">LOGO</a>
+            <a class="navbar-brand text-whiteSmoke p-0" href="#" id="logo"><img src="imagnes/R-tracker-logos_transparent.png" alt="LOGO" width="100"></a>
             <button class="navbar-toggler bg-whiteSmoke" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                 aria-label="Toggle navigation">
