--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -16,7 +16,6 @@
 
     <!-- Barra de navegación -->
 
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-negro" id="cabecera">
         <div class="container-fluid">
             <a class="navbar-brand text-whiteSmoke p-0" href="#" id="logo"><img src="imagnes/R-tracker-logos_transparent.png" alt="LOGO" width="100"></a>
@@ -79,33 +78,9 @@
 
     <!--Carreras-->
 
-    <section id="carreras" class="container-fluid">
+    <section class="container-fluid">
         <h1 class="my-4 text-center">Carreras más populares</h1>
-        <div class="row justify-content-around">
-            <div class="card col-md-3 col-10 p-0 my-2">
-                <img src="./imagnes/fotoBadajoz.jpg" class="card-img-top img-fluid" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Badajoz</h5>
-                    <p class="card-text">Carrera de Badajoz</p>
-                    <a href="#" class="btn btn-card">Visitar</a>
-                </div>
-            </div>
-            <div class="card col-md-3 col-10 p-0 my-2">
-                <img src="./imagnes/fotomadrid.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Madrid</h5>
-                    <p class="card-text">Carrera de Madrid</p>
-                    <a href="#" class="btn btn-card">Visitar</a>
-                </div>
-            </div>
-            <div class="card col-md-3 col-10 p-0 my-2">
-                <img src="./imagnes/fotoValencia.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Valencia</h5>
-                    <p class="card-text">Carrera de Valencia</p>
-                    <a href="#" class="btn btn-card">Visitar</a>
-                </div>
-            </div>
+        <div class="row justify-content-around" id="carreras">
         </div>
     </section>
 
