--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active  text-whiteSmoke" aria-current="page" href="#">Inicio</a>
-                    <a class="nav-link active  text-whiteSmoke" href="#" id="carrera">Carreras</a>
+                    <a class="nav-link active  text-whiteSmoke" href="#" id="carrerasVer">Carreras</a>
                     <a class="nav-link active  text-whiteSmoke" href="#">Clasificaciones</a>
                     <a class="nav-link active  text-whiteSmoke" id="sesion" data-bs-toggle="offcanvas"
                         href="#canvasSesion" role="button" aria-controls="canvasSesion"></a>
@@ -78,9 +78,9 @@
 
     <!--Carreras-->
 
-    <section class="container-fluid">
-        <h1 class="my-4 text-center">Carreras más populares</h1>
-        <div class="row justify-content-around" id="carreras">
+    <section class="container-fluid" id="carreras">
+        <h1 class="my-4 text-center">Listado de carreras</h1>
+        <div class="row justify-content-around" id="carrerasContenido">
         </div>
     </section>
 
@@ -90,7 +90,7 @@
 
     </section>
 
-    <section class="container-fluid mt-4" id="footer">
+    <section class="container-fluid" id="footer">
         <div class="row p-3 justify-content-center bg-negro text-center text-white">
             <div class="col-md-12 col-lg-3 d-flex flex-column">
                 <h2>Contacto</h2>
@@ -104,7 +104,7 @@
                         <p class="text-secondary"><a href="#cabecera">Inicio</a></p>
                     </div>
                     <div class="col-6">
-                        <p class="text-secondary"><a href="#carreras">Carreras</a></p>
+                        <p class="text-secondary"><a href="#carrerasVer">Carreras</a></p>
                     </div>
                     <div class="col-6">
                         <p class="text-secondary"><a href="#">Clasificaciones</a></p>
