--- a/Pagina/registro.html
+++ b/Pagina/registro.html
@@ -13,7 +13,7 @@
     </style>
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script>
-        function registrar(usuario,clave,nombre,tipo,fechaNacimiento,localidad){
+        function registrar(usuario, clave, nombre, tipo, fechaNacimiento, localidad) {
 
         }
         $(document).ready(function () {
@@ -34,28 +34,36 @@
                 let tipo = $("#tipoUsuario").val()
                 let fechaNacimiento = $("#fechaNacimiento").val()
                 let localidad = $("#localidad").val()
-
-                $.ajax({
-                    url: "./Php/registrar.php",
-                    data: {
-                        "usuario": usuario,
-                        "clave": clave,
-                        "nombreUsuario": nombre,
-                        "localidad": localidad,
-                        "tipoUsuario": tipo,
-                        "fechaNacimiento": fechaNacimiento,
-                    },
-                    type: "GET",
-                    success: function () {
-                        localStorage.setItem("usuario", usuario)
-                        location.href = "./index.html"
-                    },
-                    error: function (e) {
-                        alert("No se ha podido registrar el usuario en la base de datos.")
-                        console.log(e)
-                    }
-                })
-
+                if (usuario != "" && clave != "" && nombre != "" && localidad != "") {
+                    $.ajax({
+                        url: "./Php/registrar.php",
+                        data: {
+                            "usuario": usuario,
+                            "clave": clave,
+                            "nombreUsuario": nombre,
+                            "localidad": localidad,
+                            "tipoUsuario": tipo,
+                            "fechaNacimiento": fechaNacimiento,
+                        },
+                        type: 'POST',
+                        success: function (respuesta) {
+                            if (respuesta == false) {
+                                $("#txtModalValidacion").text("Algo ha salido mal en el registro de usuario.")
+                                $("#modalValidacion").modal("show")
+                            } else {
+                                localStorage.setItem("usuario", usuario)
+                                location.href = "./index.html"
+                            }
+                        },
+                        error: function (e) {
+                            alert("No se ha podido registrar el usuario en la base de datos.")
+                            console.log(e)
+                        }
+                    })
+                } else {
+                    $("#txtModalValidacion").text("Por favor, rellena los campos obligatorios.")
+                    $("#modalValidacion").modal("show")
+                }
             })
         })
     </script>
@@ -67,24 +75,24 @@
             <div class="col-4 rounded-1" id="formulario">
                 <form action="registrar.php" method="post" enctype="multipart/form-data">
                     <h1 class="text-center my-4 p-3">Registro de usuario</h1>
-                    <label for="usuario" class="text-start">Usuario</label><input type="text" name="usuario"
+                    <label for="usuario" class="text-start">Usuario*</label><input type="text" name="usuario"
                         id="usuario" class="my-2 form-control" maxlength="20" minlength="1" pattern="([A-Z]+|[a-z]+)"
-                        required>
-                    <label for="usuario" class="text-start">Nombre completo</label><input type="text"
-                        name="nombreUsuario" id="nombreUsuario" class="my-2 form-control" maxlength="20" minlength="1"
-                        pattern="([A-Z]+|[a-z]+)" required>
-                    <label for="clave">Clave</label><input type="password" name="clave" id="clave"
-                        class="my-2 form-control" maxlength="20" minlength="1" pattern="([A-Z]+|[a-z]+)" required>
+                        >
+                    <label for="usuario" class="text-start">Nombre completo*</label><input type="text"
+                        name="nombreUsuario" id="nombreUsuario" class="my-2 form-control" maxlength="30" minlength="1"
+                        pattern="([A-Z]+|[a-z]+)" >
+                    <label for="clave">Clave*</label><input type="password" name="clave" id="clave"
+                        class="my-2 form-control" maxlength="20" minlength="1" pattern="([A-Z]+|[a-z]+)" >
                     <label for="tipoUsuario" class="text-start">Tipo Usuario</label>
                     <select name="tipoUsuario" id="tipoUsuario" class="form-control my-2">
 
                     </select>
                     <label for="fechaNacimiento" class="text-start">Fecha de nacimiento</label>
                     <input type="date" name="fechaNacimiento" id="fechaNacimiento" class="form-control my-2">
-                    <label for="localidad">Localidad</label>
+                    <label for="localidad">Localidad*</label>
                     <input type="text" id="localidad" name="localidad" class="form-control my-2">
                     <div class="container-fluid text-center">
-                        <button class="btn btn-primary my-4" id="sesion">Iniciar sesión</button>
+                        <button class="btn btn-primary my-4" id="sesion">Registrarse</button>
                     </div>
                 </form>
             </div>
