--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -78,7 +78,7 @@
 
     <!--Carreras-->
 
-    <section class="container-fluid" id="carreras">
+    <section class="container-fluid mb-3" id="carreras">
         <h1 class="my-4 text-center">Listado de carreras</h1>
         <div class="row justify-content-around" id="carrerasContenido">
         </div>
@@ -130,6 +130,27 @@
         </div>
         <div class="offcanvas-body" id="contenidoCanvas">
             
+        </div>
+    </div>
+
+    <!--Modal de las carreras-->
+
+    <div class="modal fade" id="modalCarreras" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+        data-bs-toggle="">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="txtModalCarreras">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary">Guardar cambios</button>
+                </div>
+            </div>
         </div>
     </div>
 
