--- a/Pagina/registro.html
+++ b/Pagina/registro.html
@@ -76,13 +76,13 @@
                 <form action="registrar.php" method="post" enctype="multipart/form-data">
                     <h1 class="text-center my-4 p-3">Registro de usuario</h1>
                     <label for="usuario" class="text-start">Usuario*</label><input type="text" name="usuario"
-                        id="usuario" class="my-2 form-control" maxlength="20" minlength="1" pattern="([A-Z]+|[a-z]+)"
+                        id="usuario" class="my-2 form-control" maxlength="20" minlength="1" pattern="[a-zA-Z0-9\ ]" required
                         >
                     <label for="usuario" class="text-start">Nombre completo*</label><input type="text"
                         name="nombreUsuario" id="nombreUsuario" class="my-2 form-control" maxlength="30" minlength="1"
-                        pattern="([A-Z]+|[a-z]+)" >
+                        pattern="[a-zA-Z0-9\ ]" required>
                     <label for="clave">Clave*</label><input type="password" name="clave" id="clave"
-                        class="my-2 form-control" maxlength="20" minlength="1" pattern="([A-Z]+|[a-z]+)" >
+                        class="my-2 form-control" maxlength="20" minlength="1" pattern="[a-zA-Z0-9\ ]" required>
                     <label for="tipoUsuario" class="text-start">Tipo Usuario</label>
                     <select name="tipoUsuario" id="tipoUsuario" class="form-control my-2">
 
@@ -90,7 +90,7 @@
                     <label for="fechaNacimiento" class="text-start">Fecha de nacimiento</label>
                     <input type="date" name="fechaNacimiento" id="fechaNacimiento" class="form-control my-2">
                     <label for="localidad">Localidad*</label>
-                    <input type="text" id="localidad" name="localidad" class="form-control my-2">
+                    <input type="text" id="localidad" name="localidad" class="form-control my-2" required>
                     <div class="container-fluid text-center">
                         <button class="btn btn-primary my-4" id="sesion">Registrarse</button>
                     </div>
