--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -16,7 +16,7 @@
 
     <!-- Barra de navegación -->
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-negro" id="cabecera">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="cabecera">
         <div class="container-fluid">
             <a class="navbar-brand text-whiteSmoke p-0" href="#" id="logo"><img src="imagnes/R-tracker-logos_transparent.png" alt="LOGO" width="100"></a>
             <button class="navbar-toggler bg-whiteSmoke" type="button" data-bs-toggle="collapse"
@@ -28,7 +28,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active  text-whiteSmoke" aria-current="page" href="#">Inicio</a>
                     <a class="nav-link active  text-whiteSmoke" href="#" id="carrerasVer">Carreras</a>
-                    <a class="nav-link active  text-whiteSmoke" href="#">Clasificaciones</a>
+                    <a class="nav-link active  text-whiteSmoke" href="#" id="clasificaciones">Clasificaciones</a>
                     <a class="nav-link active  text-whiteSmoke" id="sesion" data-bs-toggle="offcanvas"
                         href="#canvasSesion" role="button" aria-controls="canvasSesion"></a>
                 </div>
