--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -101,7 +101,7 @@
                 <h2>Navegación</h2>
                 <div class="row text-justify">
                     <div class="col-6">
-                        <p class="text-secondary"><a href="#cabecera">Inicio</a></p>
+                        <p class="text-secondary"><a href="#cabecera" id="inicio">Inicio</a></p>
                     </div>
                     <div class="col-6">
                         <p class="text-secondary"><a href="#carrerasVer">Carreras</a></p>
@@ -135,25 +135,22 @@
 
     <!--Modal de las carreras-->
 
-    <div class="modal fade" id="modalCarreras" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-        data-bs-toggle="">
+    <div class="modal fade" id="modalCarreras" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Error</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body" id="txtModalCarreras">
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Guardar cambios</button>
-                </div>
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="modal-body" id="txtModalCarreras">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
         </div>
-    </div>
-
+      </div>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
