Inscripcion en carreras y modales

--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -155,8 +155,26 @@
                 <p id="tipoModal"></p>
             </div>
             <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="bi bi-x-circle-fill"></i> Close</button>
+              <button type="button" class="btn btn-azul" id="inscribirse"><i class="bi bi-pencil"></i> Inscribirse</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="modalInscripcion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content bg-negro text-white">
+            <div class="modal-header">
+                <img src="imagnes/R-tracker-logos_transparent.png" alt="LOGO" width="50">  
+              <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-center" id="txtModalInscripcion">
+                
+            </div>
+            <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-azul" id="inscribirse">Inscribirse</button>
+              <button type="button" class="btn btn-azul">Aceptar</button>
             </div>
           </div>
         </div>
