--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -90,9 +90,20 @@
     <section class="container-fluid my-3" id="contenido">
         <h1 class="my-4 text-center">Organización de las carreras</h1>
         <p class="text-center text-azul" id="mensajeOrganizar"></p>
-        <div class="container" id="lista">
+        <div  id="lista" class="p-3">
+        </div>
+        <div class="text-center my-0"><button class="btn btn-azul p-4" id="btnAddCarrera">Añadir carrera <i class="bi bi-plus-circle"></i></button></div>
+    </section>
+
+    <!--Clasificaciones-->
+
+    <section class="container-fluid my-3" id="clasificacionesCont">
+        <h1 class="my-4 text-center">Clasificaciones de las carreras</h1>
+        <div  id="listadoCarrerasClas" class="row justify-content-center gap-2">
         </div>
     </section>
+
+    <!--Footer-->
 
     <section class="container-fluid" id="footer">
         <div class="row p-3 justify-content-center bg-negro text-center text-white">
@@ -111,7 +122,7 @@
                         <p class="text-secondary"><a href="#carrerasVer">Carreras</a></p>
                     </div>
                     <div class="col-6">
-                        <p class="text-secondary"><a href="#">Clasificaciones</a></p>
+                        <p class="text-secondary"><a href="#" id="clasificaciones">Clasificaciones</a></p>
                     </div>
                 </div>
             </div>
@@ -182,6 +193,27 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="bi bi-x-circle-fill"></i> Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Modal añadir carrera-->
+
+    <div class="modal fade" id="modalAdd" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-negro text-white">
+                <div class="modal-header">
+                    <img src="imagnes/R-tracker-logos_transparent.png" alt="LOGO" width="50">
+                    <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center text-white text-start" id="txtModalAdd">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="addCarrera"><i class="bi bi-plus-circle"></i> Close</button>
+                    <button class="btn btn-azul btnEditar">Añadir carrera <i class='bi bi-plus-circle'></i></button>
                 </div>
             </div>
         </div>
