--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -101,6 +101,25 @@
         <h1 class="my-4 text-center">Clasificaciones de las carreras</h1>
         <div  id="listadoCarrerasClas" class="row justify-content-center gap-2">
         </div>
+        <div id="clasificacionCarrera" class="p-3 justify-content-center text-center d-none">
+            <div class="row p-1 rounded bg-azul text-white">
+                <div class="col-1">Posición</div>
+                <div class="col-1">Usuario</div>
+                <div class="col-3">Nombre corredor</div>
+                <div class="col-2">Fecha de nacimiento</div>
+                <div class="col-2">Localidad del corredor</div>
+                <div class="col-2">Tiempo de la carrera</div>
+                <div class="col-1">Dorsal</div>
+            </div>
+        </div>
+    </section>
+
+    <!--Listado de inscripciones de un usuario-->
+
+    <section class="container-fluid mb-3" id="listaInscripciones">
+        <h1 class="my-4 text-center">Listado de inscripciones de <span id="addUsuario"></span></h1>
+        <div class="row justify-content-center" id="listadoIns">
+        </div>
     </section>
 
     <!--Footer-->
@@ -212,8 +231,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="addCarrera"><i class="bi bi-plus-circle"></i> Close</button>
-                    <button class="btn btn-azul btnEditar">Añadir carrera <i class='bi bi-plus-circle'></i></button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="bi bi-plus-circle"></i> Close</button>
+                    <button class="btn btn-azul" id="addCarrera">Añadir carrera <i class='bi bi-plus-circle'></i></button>
                 </div>
             </div>
         </div>
