--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -80,7 +80,7 @@
     <!--Carreras-->
 
     <section class="container-fluid mb-3" id="carreras">
-        <h1 class="my-4 text-center">Listado de carreras</h1>
+        <h1 class="my-4 text-center">Listado de carreras disponibles</h1>
         <div class="row justify-content-center" id="carrerasContenido">
         </div>
     </section>
@@ -98,19 +98,10 @@
     <!--Clasificaciones-->
 
     <section class="container-fluid my-3" id="clasificacionesCont">
-        <h1 class="my-4 text-center">Clasificaciones de las carreras</h1>
         <div  id="listadoCarrerasClas" class="row justify-content-center gap-2">
+            <h2 class="text-center">Listado de carreras terminadas: </h2>
         </div>
         <div id="clasificacionCarrera" class="p-3 justify-content-center text-center d-none">
-            <div class="row p-1 rounded bg-azul text-white">
-                <div class="col-1">Posición</div>
-                <div class="col-1">Usuario</div>
-                <div class="col-3">Nombre corredor</div>
-                <div class="col-2">Fecha de nacimiento</div>
-                <div class="col-2">Localidad del corredor</div>
-                <div class="col-2">Tiempo de la carrera</div>
-                <div class="col-1">Dorsal</div>
-            </div>
         </div>
     </section>
 
@@ -118,7 +109,31 @@
 
     <section class="container-fluid mb-3" id="listaInscripciones">
         <h1 class="my-4 text-center">Listado de inscripciones de <span id="addUsuario"></span></h1>
-        <div class="row justify-content-center" id="listadoIns">
+        <div class="row justify-content-center p-5" id="listadoIns">
+            <div class="row p-1 rounded bg-azul text-white text-center">
+                <div class="col-3">Carrera</div>
+                <div class="col-2">Localizacion</div>
+                <div class="col-1">Fecha</div>
+                <div class="col-1">Longitud</div>
+                <div class="col-1">Desnivel</div>
+                <div class="col-2">Modo de inscripcion</div>
+                <div class="col-2">Tipo carrera</div>
+            </div>
+        </div>
+    </section>
+
+    <!--Solicitudes de los organizadores-->
+
+    <section class="container-fluid mb-3" id="solicitudesCont">
+        <h1 class="my-4 text-center">Solicitudes de inscripcion</h1>
+        <div class="row justify-content-center align-items-center" id="listadoSolicitudes">
+            <div class="col-md-6 col-12 text-center">
+                <button class="btn btn-azul mx-3" id="solicitudesAceptadas">Aceptadas</button>
+                <button class="btn btn-azul mx-3" id="solicitudesPendientes">Pendientes</button>
+                <button class="btn btn-azul mx-3" id="solicitudesRechazadas">Denegadas</button>
+            </div>
+            <div class="col-md-6 col-12 text-center row p-2" id="listaSolicitudes">
+            </div>
         </div>
     </section>
 
@@ -186,7 +201,7 @@
                     <p id="numsModal"></p>
                     <p id="longitudModal"></p>
                     <p id="desnivelModal"></p>
-                    <p id="modoModal"></p>
+                    <p id="modoModal">Modo de inscripcion : <span id="getModo"></span></p>
                     <p id="tipoModal"></p>
                 </div>
                 <div class="modal-footer">
